# hanshow-2in9-epaper

./: CMakeLists.txt  README.md  epd-2in9.c  epd-2in9.h  main.c
firmware/: hanshow-2in9-epaper.hex
